--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,25 @@ a.active {
 
 .contenedorMenu {
   position: sticky;
+  z-index: 5;
   top: 0;
+}
+
+.logo {
+  color: #b6901b;
+  display: flex;
+  align-items: center;
+  width: 17%;
+  justify-content: space-between;
+}
+
+.medioAuto {
+  width: 2.5rem;
+  height: 2.5rem;
+  background-image: url("https://img.freepik.com/iconos-gratis/carro_318-830631.jpg?w=2000");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .paginas {
@@ -21,8 +39,6 @@ a.active {
   color: white;
   text-decoration: none;
 }
-
-
 
 .imagencarrusel1 {
   width: 400px;
@@ -56,6 +72,7 @@ a.active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 5rem;
 }
 
 .categorias h2 {
@@ -164,6 +181,9 @@ a.active {
   box-shadow: 10px 10px rgb(103, 103, 103);
 }
 
+.contenedorPerfil {
+  margin-bottom: 2rem;
+}
 .editarPerfil {
   width: 100%;
   border: solid #5684c2 2.5px;
@@ -251,9 +271,14 @@ a.active {
   width: 100%;
 }
 
+.botonesDetalle {
+  width: 90vw;
+  display: flex;
+  justify-content: space-around;
+}
+
 .sectionFavoritos {
   height: 100vh;
-  
 }
 
 .divFavoritos {
@@ -279,7 +304,91 @@ a.active {
   background-repeat: no-repeat;
 }
 
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-inline: 2rem;
+  width: 100%;
+  height: 10rem;
+  background-color: black;
+}
 
+.footer2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-inline: 2rem;
+  width: 100%;
+  height: 5rem;
+  background-color: black;
+  border-top: 1px solid white;
+}
+.sectionFooter {
+  width: 100%;
+}
+.logo2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 10rem;
+}
+
+.logoFooter {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.logoFooter p {
+  display: none;
+}
+
+.logoFooter div {
+  width: 85%;
+}
+
+.medioAuto2 {
+  height: 4rem;
+  width: 10rem;
+  background-image: url("https://img.freepik.com/iconos-gratis/carro_318-830631.jpg?w=2000");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.redesSociales {
+  margin-inline: auto;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.instagram {
+  width: 3rem;
+  height: 3rem;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/instagram.png?alt=media&token=895a39b0-5687-41aa-bc00-cfced90c52e4");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.facebook {
+  width: 3rem;
+  height: 3rem;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/facebook.png?alt=media&token=178da711-12b6-4cd1-8ded-79a6df7fa235");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.linkedin {
+  width: 3rem;
+  height: 3rem;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/linkedin.png?alt=media&token=24cbd700-93c6-4d38-87ad-5b1653e2cd92");
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 @media only screen and (min-width: 400px) {
   .contenedorMenu {
@@ -348,7 +457,8 @@ a.active {
   }
 
   .formularioRegistro {
-    margin-top: 5rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
   }
 
   .contenedorRegistro {
@@ -390,7 +500,8 @@ a.active {
   }
 
   .renderSeccionDetalle {
-    margin-top: 10rem;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
   }
 
   .seccionDetalle {
@@ -421,9 +532,7 @@ a.active {
   }
 
   .botonesDetalle {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+    min-width: 25vw;
   }
   .sectionFavoritos {
     display: flex;
@@ -434,7 +543,6 @@ a.active {
   }
 
   .divFavoritos {
-    
     margin-left: 12%;
     padding-top: 1rem;
     border-radius: 10px;
@@ -450,11 +558,10 @@ a.active {
 
   .cardFavoritos {
     box-shadow: 10px 10px rgb(103, 103, 103);
-    max-width: 20rem;
-    max-height: 20rem;
-    border:black solid 2px; ;
+    max-width: 15rem;
+    max-height: 15rem;
+    border: black solid 2px;
     margin-bottom: 1.5rem;
-
   }
 
   .imagenFavoritos {
@@ -485,6 +592,120 @@ a.active {
     border: black solid 2px;
     box-shadow: 10px 10px rgb(103, 103, 103);
   }
+  .sectionCarrito {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    margin-inline: auto;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+    height: 70vh;
+    width: 60%;
+    border: black solid 2px;
+    box-shadow: 10px 10px rgb(103, 103, 103);
+  }
 
+  .carrito {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items:top;
+    margin-left: 1rem;
+  }
+.botonesCarrito {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 8rem;
+  height: 8rem;
+  margin-right: 2rem;
+}
 
+  .footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-inline: 2rem;
+    width: 100%;
+    height: 12rem;
+    background-color: black;
+  }
+
+  .footer2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-inline: 2rem;
+    width: 100%;
+    height: 5rem;
+    background-color: black;
+    border-top: 1px solid white;
+  }
+  .sectionFooter {
+    width: 70%;
+  }
+
+  .logoFooter {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .logoFooter p {
+    width: 25%;
+    display: block;
+  }
+
+  .logoFooter div {
+    width: 40%;
+  }
+  .logo2 {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    align-items: center;
+    font-size: larger;
+    gap: 0.5rem;
+  }
+
+  .medioAuto2 {
+    height: 9rem;
+    width: 6rem;
+    background-image: url("https://img.freepik.com/iconos-gratis/carro_318-830631.jpg?w=2000");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .redesSociales {
+    margin-inline: auto;
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+  }
+
+  .instagram {
+    width: 3rem;
+    height: 3rem;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/instagram.png?alt=media&token=895a39b0-5687-41aa-bc00-cfced90c52e4");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .facebook {
+    width: 3rem;
+    height: 3rem;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/facebook.png?alt=media&token=178da711-12b6-4cd1-8ded-79a6df7fa235");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .linkedin {
+    width: 3rem;
+    height: 3rem;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/blackgarage-guatemala.appspot.com/o/linkedin.png?alt=media&token=24cbd700-93c6-4d38-87ad-5b1653e2cd92");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
