--- a/src/index.css
+++ b/src/index.css
@@ -168,9 +168,40 @@ a.active {
   box-shadow: 10px 10px rgb(103, 103, 103);
 }
 
+.sectionCarrito {
+  /* display: flex;
+  flex-direction: column; */
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  min-height: 70vh;
+  width: 70%;
+  border: black solid 2px;
+  box-shadow: 10px 10px rgb(103, 103, 103);
+  overflow-y: scroll;
+}
+
 .carrito {
-  width: 70vw;
-  height: 70vh;
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+  align-items: center;
+  margin-left: 0.5rem;
+  min-height: 10rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border: solid black 1px;
+  box-shadow: 10px 10px rgb(103, 103, 103);
+}
+
+.botonesCarrito {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 8rem;
+  height: 8rem;
+
 }
 
 .contenedorRegistro {
@@ -229,6 +260,7 @@ a.active {
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 .divPublicaciones {
   display: grid;
@@ -240,6 +272,7 @@ a.active {
   width: 75vw;
   border: black solid 2px;
   box-shadow: 10px 10px rgb(103, 103, 103);
+  
 }
 
 .renderSeccionDetalle {
@@ -279,6 +312,7 @@ a.active {
 
 .sectionFavoritos {
   height: 100vh;
+  overflow: scroll;
 }
 
 .divFavoritos {
@@ -294,6 +328,8 @@ a.active {
   grid-template-columns: 1fr;
   justify-items: center;
   margin-bottom: 2rem;
+  /* overflow: scroll; */
+  
 }
 
 .imagenFavoritos {
@@ -540,6 +576,7 @@ a.active {
     flex-direction: column;
     align-items: center;
     margin-left: 20%;
+    overflow:unset;
   }
 
   .divFavoritos {
@@ -547,13 +584,14 @@ a.active {
     padding-top: 1rem;
     border-radius: 10px;
     min-height: 70vh;
-    width: 60vw;
+    width: 65vw;
     border: black solid 2px;
     box-shadow: 10px 10px rgb(103, 103, 103);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     margin-bottom: 2rem;
+    overflow: scroll;
   }
 
   .cardFavoritos {
@@ -561,7 +599,7 @@ a.active {
     max-width: 15rem;
     max-height: 15rem;
     border: black solid 2px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
   }
 
   .imagenFavoritos {
@@ -593,8 +631,8 @@ a.active {
     box-shadow: 10px 10px rgb(103, 103, 103);
   }
   .sectionCarrito {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     margin-top: 2rem;
     margin-inline: auto;
     margin-bottom: 2rem;
@@ -603,24 +641,30 @@ a.active {
     width: 60%;
     border: black solid 2px;
     box-shadow: 10px 10px rgb(103, 103, 103);
+    overflow-y: scroll;
   }
 
   .carrito {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    align-items:top;
+    width: 90%;
+    align-items: center;
     margin-left: 1rem;
+    height: 10rem;
+    margin-top: 1rem;
+    border: solid black 1px;
+    box-shadow: 10px 10px rgb(103, 103, 103);
   }
-.botonesCarrito {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  width: 8rem;
-  height: 8rem;
-  margin-right: 2rem;
-}
+
+  .botonesCarrito {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 8rem;
+    height: 8rem;
+    margin-right: 2rem;
+  }
 
   .footer {
     display: flex;
